--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h3>A website about me and my favorite things</h3>
             </div>
             <div class="col">
-                <img src="silhouette-photo-of-woman-standing-on-water-during-sunset-3773319.jpg" />
+                <img src="silhouette-photo-of-woman-standing-on-water-during-sunset-3773319.jpg" class="profile-img" />
             </div>
         </div>
         
