--- a/index.html
+++ b/index.html
@@ -46,7 +46,18 @@
         <div class="row">
             <iframe width="100%" height="315" src="https://www.youtube.com/embed/2L515SmPbRw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col"></div>
+        <div class="col">
+            <div class="row">
+                <div class="col">
+                    <img src"https://media.giphy.com/media/xTiQyqwwF7R3bwm2Ag/giphy.gif" />
+                </div>
+                <div class="col">
+                    <img src="https://media.giphy.com/media/WroQT9Vho7GyQ/giphy.gif" />
+                </div>
+            </div>
+        </div>
+    </div>
+        </div>
     </div>
           
              
