--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         </div>  
         
         <div class="row">
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/2L515SmPbRw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="col" style="width: 66.66%;">
+           <iframe width="100%" height="315" src="https://www.youtube.com/embed/2L515SmPbRw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="col">
             <div class="row">
