--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="col">
             <div class="row">
                 <div class="col">
-                    <img src"https://media.giphy.com/media/3o7abAHdYvZdBNnGZq/giphy.gif" />
+                    <img src="https://media.giphy.com/media/3o7abAHdYvZdBNnGZq/giphy.gif" />
                 </div>
                 <div class="col">
                     <img src="https://media.giphy.com/media/WroQT9Vho7GyQ/giphy.gif" />
