--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
              
         <div class="footer">
             <!-- footer content here -->
+            <p>This is a website for a Alondra to share he favorite things with the world wide web.</p>
+            <a href="https://www.coolmathgames.com/" class="btn-1">Want to play a fun games?</a>
         </div>
     </div>
     <div class="copyright">
