--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <!-- main content here -->
     <div class="banner">
-        <div class="banner-text">Hello, I'm Alondra.</div>
+        <div class="banner-text">Hello, I'm Aurora.</div>
     </div>
     <div class="content">
         <div class="row">
             <div class="col">
-                <h1>Alondra</h1>
+                <h1>Aurora Lates</h1>
                 <h3>A website about me and my favorite things</h3>
             </div>
             <div class="col">
@@ -65,7 +65,7 @@
     
         <div class="footer">
             <!-- footer content here -->
-            <p>This is a website for a Alondra to share her favorite things with the world wide web.</p>
+            <p>This is a website for a Aurora to share her favorite things with the world wide web.</p>
             <a href="https://www.coolmathgames.com/" class="btn-1">Want to play a fun games?</a>
         </div>
     </div>
