--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
         <hr />
         
         <div class="row"> 
-            <div class="col">
+            <div class="col favorites-icecream">
                 <h2>My Favorite Icecream</h2>
                 <p>Mint Chocalate Chip</p>
             </div> 
-            <div class="col">
+            <div class="col favorites-sport">
                 <h2>My Favorite sport</h2>
                 <p>Swim for the win</p>
             </div>
-            <div class="col">
+            <div class="col favorites-vacation">
                 <h2>My Favorite place to go on vacation</h2>
                 <p>the beach :)</p>
             </div>
