--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         </div>  
         
         <div class="row">
+            <div class="col media-video"
+                 <h2>A relaxing time lapse<h2>
             <div class="col" style="width: 66.66%;">
            <iframe width="100%" height="315" src="https://www.youtube.com/embed/2L515SmPbRw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
