--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         
         <div class="row">
             <div class="col media-video"
-                 <h2>A relaxing time lapse<h2>
+                 <h2>A relaxing sunset time lapse</h2>
+                    <p>+ some dog gifs</p>
             <div class="col" style="width: 66.66%;">
            <iframe width="100%" height="315" src="https://www.youtube.com/embed/2L515SmPbRw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
