--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     
         <div class="footer">
             <!-- footer content here -->
-            <p>This is a website for a Aurora to share her favorite things with the world wide web.</p>
-            <a href="https://www.coolmathgames.com/" class="btn-1">Want to play a fun games?</a>
+            <p>Want to play some fun games?</p>
+            <a href="https://www.coolmathgames.com/" class="btn-1">click here!</a>
         </div>
     </div>
     <div class="copyright">
