--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     
         <div class="footer">
             <!-- footer content here -->
-            <p>Want to play some fun games?</p>
+            <p>Want to play some cool games?</p>
             <a href="https://www.coolmathgames.com/" class="btn-1">click here!</a>
         </div>
     </div>
